--- a/src/locales/ru.yml
+++ b/src/locales/ru.yml
@@ -34,7 +34,7 @@ smarts:
   p1: Контракт организует своих жителей в очередь. Допустим, вы сделали вклад и уже первый в очереди. Тогда вклад последнего вошедшего в очередь сразу же направляется на выплаты вам до достижения 111-141% от вашего вклада. 
   p2: Как только житель получает 111-141% своего вклада, он удаляется из очереди, освобождая место следующему жителю. Таким образом, в отличие от пирамид, в которых проценты платятся пожизненно, здесь они платятся очень ограниченно - вы получаете ровно 111-141%. Но зато, во-первых, быстро, во-вторых, ограниченные проценты способствуют более долгой жизни пирамиды.
   p3: Умный житель, получив 111% вполне может сделать вклад снова, и тогда проценты уже будут 111% + 2%. И так каждый раз каждое реинвестирование будет повышать %%% В принципе, очень умный житель может сделать даже несколько вкладов сразу. Но важно помнить, что для плавного роста проекта максимальный вклад ограничен 10 ETH!
-      <p>Для последнего сделавшего вклад более 30 минут жителя есть бонус - 2% от всего оборота контракта!
+      <p>Для последнего сделавшего вклад от 0.05 ETH более 30 минут жителя есть бонус - 2% от всего оборота контракта!
       <p>Очередь жителей перезагружается каждый день в 20:00 по московскому времени.
       <p>Ставка повышающегося процента с каждым кругом реинвестирования: 111% за 1й, 113% за 2й, 117% за 3й, 121% за 4й, 125% за 5й, 130% за 6й, 135% за 7й, 141% за 8й круг
 
